--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "start": "node index.mjs",
-    "package": "rm -rf dist && pkg package.json && mkdir dist/sharp && cp -r node_modules/sharp/vendor dist/sharp/vender && cp -r node_modules/sharp/build dist/sharp/build"
+    "start": "node index.js",
+    "package": "rm -rf dist && pkg package.json && cp node_modules/*/build/Release/*.node dist"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,9 @@
       "node16-linux-x64"
     ],
     "assets": [
-      "node_modules/canvas/build/Release/*"
+      "node_modules/canvas/build/Release/*",
+      "node_modules/sharp/build/Release/*",
+      "node_modules/sharp/vendor/**/*"
     ]
   }
 }
