--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "bin": "index.js",
   "scripts": {
     "start": "node index.js",
-    "package": "rm -rf dist && pkg package.json && cp node_modules/*/build/Release/*.node dist"
+    "package": "rm -rf dist && pkg package.json && find node_modules -name '*.node' | grep -E 'Release/[^/]+\\.node' | xargs cp -t dist"
   },
   "repository": {
     "type": "git",
